# Tornadoes

./: .env  .env.copilot-test  Cargo.toml  Dockerfile  README.md  docker-compose.yml  fly.toml  migrations.sql  run_output.txt  tornadoes.db
migrations/: 20260220000000_create_users_table.sql  20260220000100_create_players_table.sql  20260220000200_create_attendance_table.sql  20260220000300_create_tournaments_table.sql  20260220000400_create_matches_table.sql  20260220090000_add_name_to_users.sql  20260220094500_add_role_id_to_users.sql  20260220100000_fix_users_table_for_backend.sql  20260220101500_fix_users_ids_to_bigint.sql  20260220103000_seed_roles_admin.sql  20260220131000_add_date_to_attendance.sql  20260220132000_rename_match_date_to_date_in_matches.sql  20260220132500_add_opponent_and_venue_to_matches.sql  20260220133000_add_result_and_score_to_matches.sql  20260220133500_add_match_link_to_matches.sql  20260220140000_add_season_id_to_matches_and_tournaments.sql  20260222120000_fix_users_id_to_bigint.sql  20260222123000_create_coach_table.sql  20260222130000_convert_all_ids_to_bigint.sql  20260222160000_fix_all_id_types_to_bigint.sql  20260222170000_full_backend_schema.sql  20260304090000_create_match_events_table.sql  20260304100000_fix_migration_syntax.sql
src/: auth.rs  db.rs  errors.rs  lib.rs  main.rs  models.rs
src/handlers/: admin.rs  announcements.rs  attendance.rs  mod.rs  (+2 more)
static/: admin.html  antidoping.html  attendance.html  dashboard.html  index.html  login.html  matches.html  register.html  style.css
tests/: admin_access.rs  match_statistics.rs
(+2 files in other folders)
